--- a/app/pages/faq_service_list/index.njk
+++ b/app/pages/faq_service_list/index.njk
@@ -17,7 +17,7 @@
 {# Main content #}
 {% block content %}
 
-  <main class="faq-service-page">
+  <main class="faq-service_list-page">
     <section class="section-welcome">
       <div class="containers">
         <h1 class="ttl-primary">「支払い.com」に関するよくある質問</h1>
@@ -25,7 +25,7 @@
         <h3 class="ttl-tertiary">自分に合ったビジネスカードを。</h3>
       </div>
     </section>
-    
+
     <section class="section-primary">
       <div class="anc01">
         <div class="containers">
@@ -33,7 +33,7 @@
             <h1 class="anc01__content-head">よくあるご質問</h1>
             <p class="anc01__content-detail">
               お客様からよくいただくご質問にお答えします。この他にご質問がある方は、
-              <br> 
+              <br>
               <a>お問い合わせ</a>より、お気軽に連絡ください。<br>
               2営業日以内に担当者からご連絡させて頂きます。
             </p>
@@ -135,6 +135,4 @@
       </div>
     </section>
   </main>
-
-
 {% endblock %}
