--- a/app/pages/news_detail/index.njk
+++ b/app/pages/news_detail/index.njk
@@ -17,7 +17,7 @@
 {# Main content #}
 {% block content %}
 
-  <main class="no54-page">
+  <main class="news_detail-page">
     <section class="">
       <div class="containers flex">
         <!-- 投稿記事詳細メイン -->
