--- a/app/pages/news_list/index.njk
+++ b/app/pages/news_list/index.njk
@@ -22,7 +22,7 @@ link:"#"
 {# Main content #}
 {% block content %}
 
-<main class="new-page">
+<main class="news_list-page">
   <section class="section-new containers flex">
     <div class="section-main">
       <div class="section-title">ニュース</div>
