--- a/app/pages/case_detail/index.njk
+++ b/app/pages/case_detail/index.njk
@@ -26,7 +26,7 @@ link:"#"
 {# Main content #}
 {% block content %}
 
-<main class="case-details-page">
+<main class="case_detail-page">
   <section class="section-welcome">
     <div class="container-1200 flex gap60">
       <div class="section-welcome--img">
