--- a/app/pages/case_list/index.njk
+++ b/app/pages/case_list/index.njk
@@ -24,7 +24,7 @@
 {% block content %}
 
 
-<main class="case-page">
+<main class="case_list-page">
   <section class="section-welcome">
     <div class="container-1200">
       <h2 class="ttl-secondary">中小企業・個人事業主様の導入事例</h2>
