--- a/app/assets/scss/4-pages/_case_list.scss
+++ b/app/assets/scss/4-pages/_case_list.scss
@@ -1,4 +1,4 @@
-.case-page {
+.case_list-page {
   margin: auto;
   padding: 140px 0 0px;
 
@@ -9,7 +9,7 @@
   .section-welcome {
     text-align: center;
     padding: 140px 0;
-    background: url(../img/common/lower_visual.png) 50%/cover no-repeat;
+    background: url(../img/common/lower_visual.png) 50% / cover no-repeat;
 
     @media #{$sp} {
       padding: 50px 10px;
@@ -31,7 +31,7 @@
       margin-bottom: 0;
 
       @media #{$sp} {
-      font-size: 14px;
+        font-size: 14px;
       }
     }
   }
@@ -64,7 +64,7 @@
       .card-type10 {
         width: 100%;
         padding: 0;
-        box-shadow: 0 10px 20px rgba(0,0,0,.11);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.11);
 
         .card--img {
           position: relative;
@@ -74,7 +74,7 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            transform: translate(-50%,-50%);
+            transform: translate(-50%, -50%);
           }
         }
 
@@ -84,7 +84,7 @@
           .card__header--btn {
             text-align: left;
 
-            .black_pill_btn{
+            .black_pill_btn {
               padding: 5px 20px;
               font-size: 12px;
               line-height: 13px;
@@ -97,7 +97,14 @@
           }
 
           .ttl-quaternary {
-            margin-bottom: 10px;
+            background-color: transparent;
+            color: #000;
+            text-align: left;
+            margin-bottom: 0;
+
+            &::before {
+              display: none;
+            }
           }
 
           .ttl-quinary {
@@ -107,8 +114,18 @@
 
           .ttl-senary {
             margin-bottom: 20px;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 3;
+            overflow: hidden;
           }
 
+          .bondi_blue_btn {
+            @media #{$sp} {
+              max-width: 100%;
+              display: block;
+            }
+          }
         }
       }
     }
