fix svg toggle logic

--- a/app/_template/component/icons/arrow.njk
+++ b/app/_template/component/icons/arrow.njk
@@ -3,11 +3,12 @@
   width="18.461"
   height="18.461"
   viewBox="0 0 18.461 18.461"
+  class="arrow-svg"
 >
   <path
     id="arrow"
     d="M11.554,0V11.554H0"
-    transform="translate(9.231 18.461) rotate(-135)"
+    transform="translate(9.231) rotate(45)"
     fill="none"
     stroke="#444"
     stroke-width="3"
