--- a/app/pages/faq/faq_service_list/index.njk
+++ b/app/pages/faq/faq_service_list/index.njk
@@ -48,8 +48,8 @@
           <div id="question__content" class="question__content">
             <div class="QA__content-head">Q.</div>
             <div class="QA__content-content">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</div>
-            <div class="QA__content-icon">
-              {% include "component/icons/arrow-up.njk" %}
+            <div id="arrow-icon" class="QA__content-icon">
+              {% include "component/icons/arrow.njk" %}
             </div>
           </div>
           <div id="answer__content" class="answer__content">
@@ -64,7 +64,7 @@
             <div class="QA__content-head">Q.</div>
             <div class="QA__content-content">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</div>
             <div class="QA__content-icon">
-              {% include "component/icons/arrow-down.njk" %}
+              {% include "component/icons/arrow.njk" %}
             </div>
           </div>
         </div>
@@ -75,7 +75,7 @@
             <div class="QA__content-head">Q.</div>
             <div class="QA__content-content">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</div>
             <div class="QA__content-icon">
-              {% include "component/icons/arrow-down.njk" %}
+              {% include "component/icons/arrow.njk" %}
             </div>
           </div>
         </div>
@@ -85,7 +85,7 @@
             <div class="QA__content-head">Q.</div>
             <div class="QA__content-content">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</div>
             <div class="QA__content-icon">
-              {% include "component/icons/arrow-down.njk" %}
+              {% include "component/icons/arrow.njk" %}
             </div>
           </div>
         </div>
