add branch news_detail

--- a/app/pages/news_detail/index.njk
+++ b/app/pages/news_detail/index.njk
@@ -5,6 +5,11 @@
 {% set description = "" %}
 {% set keywords = "" %}
 
+{% set breadcrumb = [{
+text:"ニュース（詳細）",
+link:"/news_detail"
+}] %}
+
 {# Page settings and also body class #}
 {% set page = "" %}
 
