--- a/app/assets/scss/4-pages/_news_detail.scss
+++ b/app/assets/scss/4-pages/_news_detail.scss
@@ -1,4 +1,4 @@
-.news_details-page {
+.news_detail-page {
   .main-conts {
     .time_tag {
       .time {
@@ -53,7 +53,7 @@
               border-width: 2px;
             }
             &:hover {
-              padding: 20px 0 20px 25px;
+              padding: 18px 0 18px 25px;
               background: none;
               &:before {
                 left: 5px;
