--- a/app/pages/faq_service_list/index.njk
+++ b/app/pages/faq_service_list/index.njk
@@ -18,7 +18,7 @@
 {% block content %}
 
   <main class="faq-service_list-page">
-    <section class="section-welcome">
+    <section class="section-welcome section">
       <div class="containers">
         <h1 class="ttl-primary">「支払い.com」に関するよくある質問</h1>
 
@@ -26,7 +26,7 @@
       </div>
     </section>
 
-    <section class="section-primary">
+    <section class="section-primary section">
       <div class="anc01">
         <div class="containers">
           <div class="anc01__content">
@@ -42,7 +42,7 @@
       </div>
     </section>
 
-    <section class="section-secondary">
+    <section class="section-secondary section">
       <div class="containers">
         <div class="QA__content">
           <div id="question__content" class="question__content">
@@ -92,7 +92,7 @@
       </div>
     </section>
 
-    <section class="section-tertiary">
+    <section class="section-tertiary section">
       <div class="card-type22">
         <div class="ttl-notice">FOR THOSE CONSIDERING</div>
         <h3 class="ttl-tertiary">支払い.comをご検討中の方へ</h3>
