--- a/app/pages/faq/index.njk
+++ b/app/pages/faq/index.njk
@@ -1,4 +1,4 @@
-{% extends "layout/top.njk" %}
+{% extends "layout/default.njk" %}
 
 {# Custom SEO tags, leave blank to apply the default values #}
 {% set title = "" %}
@@ -17,41 +17,62 @@
 {# Main content #}
 {% block content %}
 
-<main class="faq" style="  margin: auto;
-  padding: 140px 0 0;">
-  <section class="section-welcome" style="position: relative;
-    padding: 140px 0;
-    text-align: center;
-    background-image: url('/assets/img/common/lower_visual.png');
-    background-size: cover;
-    background-repeat: no-repeat;">
-    <div></div>
+<main class="faq-page">
+  <section class="section-welcome">
     <h3 class="ttl-tertiary">中小企業・個人事業主のお客様向け</h3>
     <h2 class="ttl-primary">よくある質問</h2>
   </section>
-  <section class="section-search" style="">
+  <section class="section-search">
     <div class="search">
       <form action="" class="search__form">
-        <input class="search__input" type="search" style="background: #FFFFFF 0% 0% no-repeat padding-box;
-          border: 2px solid #444444;
-          border-radius: 3px;
-          opacity: 1;" placeholder="キーワードから探す">
-        <button class="search__btn" style="border-radius: 0px 3px 3px 0px;background: #444444 0% 0% no-repeat padding-box;
-          opacity: 1;" type="submit"><img src="/assets/img/common/faq-search.svg"></button>
+        <input class="search__input" type="search" placeholder="キーワードから探す">
+        <button class="search__btn" type="submit"><img src="/assets/img/common/faq-search.svg"></button>
       </form>
     </div>
-  </section>
-  <section class="bottom-banner" style="padding:150px 0;position:relative;background-color:white;display:block;">
-    <div style="position:absolute; text-align:center;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 100%;">
-      <h3 class="ttl-tertiary" style="margin-top:70px;font-size:32px;text-align:center; margin-bottom:30px;">導入前のご質問・ご相談を受け付けています。<br>お気軽にお問い合わせください</h3>
-      <div class="quinary-btn" style="margin-bottom:30px;">
-        <a href="#" class="blue_gradient_btn" style="display:inline-block;">導入のご相談・お問い合わせ（無料）</a>
+    <div class="search-block">
+      <div class="grid-container">
+        <div class="grid-item">
+          <p class="grid-item__title">個人与信型ビジネスカード</p>
+          <img src="/assets/img/common/arrow-down.svg">
+        </div>
+        <div class="grid-item">
+          <p class="grid-item__title">法人与信型ビジネスカード</p>
+          <img src="/assets/img/common/arrow-down.svg">
+        </div>
+        <div class="grid-item">
+          <p class="grid-item__title">支払い.com</p>
+          <img src="/assets/img/common/arrow-down.svg">
+        </div>
+        <div class="grid-item">
+          <p class="grid-item__title">セゾンインボイス </p>
+          <img src="/assets/img/common/arrow-down.svg">
+        </div>
+        <div class="grid-item">
+          <p class="grid-item__title">セゾンフクリコ</p>
+          <img src="/assets/img/common/arrow-down.svg">
+        </div>
+        <div class="grid-item">
+          <p class="grid-item__title">ビジネスサポートローン</p>
+          <img src="/assets/img/common/arrow-down.svg">
+        </div>
+        <div class="grid-item">
+          <p class="grid-item__title">Concur Expense</p>
+          <img src="/assets/img/common/arrow-down.svg">
+        </div>
+        <div class="grid-item">
+          <p class="grid-item__title">CosPro</p>
+          <img src="/assets/img/common/arrow-down.svg">
+        </div>
       </div>
-      <div class="ttl-quaternary" style="margin-bottom:70px;font-size:20px;font-weight:normal;">2営業日以内に回答いたします。</div>
+    </div>
+  </section>
+  <section class="text-banner-section">
+    <div class="banner__title">
+      <h3 class="ttl-tertiary">導入前のご質問・ご相談を受け付けています。<br>お気軽にお問い合わせください</h3>
+      <div class="quinary-btn">
+        <a href="#" class="blue_gradient_btn">導入のご相談・お問い合わせ（無料）</a>
+      </div>
+      <div class="ttl-quaternary">2営業日以内に回答いたします。</div>
     </div>
   </section>
   <section class="octonary-section">
@@ -87,7 +108,5 @@
     </div>
   </section>
 </main>
-
-<script src="/assets/js/main.js"></script>
 
 {% endblock %}
