--- a/app/assets/scss/4-pages/_business.scss
+++ b/app/assets/scss/4-pages/_business.scss
@@ -1,29 +1,115 @@
-.business-page {
+.smaller_companies {
   margin: auto;
-  padding: 140px 0 0px;
+  padding: 133px 0 0px;
+  @media #{$sp} {
+    padding: 50px 0 0;
+  }
 
+  // ===========START SECTIONS==========
   .section-welcome {
     padding: 133px 0 133px 0;
     text-align: center;
-    background-color: #f7f7f7;
+    position: relative;
 
-    .ttl-primary {
-      font-size: 42px;
-      margin-bottom: 31px;
+    .slick-slider {
+      .slick-list {
+        height: 100%;
+
+        .slick-track {
+          height: 100%;
+
+          img {
+            height: 100%;
+          }
+        }
+      }
     }
 
-    .ttl-tertiary {
-      font-size: 24px;
+    &__banner {
+      position: absolute;
+      z-index: -1;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: inherit;
+      overflow: hidden;
+      background: linear-gradient(114deg, #343434 0%, #486799 100%) 0% 0%
+        no-repeat padding-box;
+
+      img {
+        position: static;
+        transform: none;
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
     }
 
-    .ttl-quaternary {
-      font-size: 20px;
+    &__inner {
+      display: inline-block;
+      background: $primary-color;
+      transform: skewX(-15deg);
+      padding: 0px 20px;
+
+      .ttl-tertiary {
+        transform: skewX(15deg);
+        color: #ffffff;
+        margin-bottom: 0;
+
+        strong {
+          color: $yellow-color;
+        }
+      }
+    }
+
+    &__title {
+      margin-top: 30px;
+      margin-bottom: 56px;
+      color: #ffffff;
+
+      .ttl-primary {
+        margin-bottom: 0;
+      }
     }
   }
 
   .section-primary {
     text-align: center;
     padding: 60px 120px 70px;
+
+    @media #{$sp} {
+      padding: 35px 15px;
+    }
+
+    .section-primary-wrapper {
+      .containers {
+        max-width: unset;
+        padding: 0;
+
+        .card-list {
+          display: flex;
+          flex-wrap: wrap;
+          column-gap: 30px;
+          row-gap: 20px;
+
+          @media #{$tab} {
+            display: grid;
+            grid-template-columns: repeat(2, minmax(auto, 380px));
+          }
+
+          @media #{$sp} {
+            display: flex;
+            flex-direction: column;
+          }
+
+          li {
+            flex-basis: calc(33.33% - 60px);
+            max-width: 380px;
+          }
+        }
+      }
+    }
 
     .ttl-primary {
       font-size: 32px;
@@ -36,17 +122,7 @@
       margin: 0;
       text-align: center;
       margin-bottom: 30px;
-    }
-
-    .section-primary-wrapper {
-      .containers {
-        max-width: unset;
-        padding: 0;
-
-        .card-list {
-          justify-content: center;
-        }
-      }
+      color: $primary-color;
     }
   }
 
@@ -55,10 +131,15 @@
     padding: 90px 120px 70px;
     background-color: #eeeeee;
 
+    @media #{$sp} {
+      padding: 35px 15px;
+    }
+
     .notification-primary {
       padding-bottom: 30px;
       margin-bottom: 60px;
       background-color: #fff;
+      box-shadow: 0px 3px 20px #00000029;
 
       .notification-panel1 {
         .latest {
@@ -69,6 +150,12 @@
             justify-content: flex-start;
             margin: auto;
             padding: 0;
+          }
+        }
+
+        .lastest-list {
+          @media #{sp} {
+            display: grid;
           }
         }
       }
@@ -83,6 +170,12 @@
             padding: 13px 0;
             background-color: #00aba0;
           }
+
+          .card-type13 {
+            .bondi_blue_outline_btn {
+              margin-bottom: 20px;
+            }
+          }
         }
 
         &:last-child {
@@ -93,10 +186,12 @@
 
     .notification-secondary {
       margin-bottom: 60px;
+      box-shadow: 0px 3px 20px #00000029;
     }
 
     .notification-tertiary {
       margin-bottom: 60px;
+      box-shadow: 0px 3px 20px #00000029;
 
       .notification-panel1 {
         .card-type13 {
@@ -114,6 +209,7 @@
 
     .notification-quaterary {
       margin-bottom: 60px;
+      box-shadow: 0px 3px 20px #00000029;
 
       .notification-panel1 {
         .card-type13 {
@@ -132,14 +228,16 @@
     }
 
     .notification-quinary {
+      box-shadow: 0px 3px 20px #00000029;
+
       .notification-panel1 {
         .card-type13 {
           padding: 0;
-          margin-bottom: 60px;
+          margin-bottom: 30px;
 
           .sp-reverse {
             .sec__img {
-              margin-top: 50px;
+              margin-top: 80px;
               max-width: 439px;
               max-height: 153px;
             }
@@ -152,16 +250,24 @@
   .section-tertiary {
     padding: 70px 0;
     text-align: center;
-    background-color: #fff;
+    background-color: $green-color;
+    color: #ffffff;
+
+    .ttl-sub {
+      font-size: 14px;
+      font-weight: bold;
+      font-family: "Futura";
+    }
 
     .ttl-secondary {
       font-size: 32px;
-      margin-bottom: 31px;
+      margin-bottom: 40px;
     }
 
     .ttl-tertiary {
       font-size: 20px;
       font-weight: 400;
+      margin-bottom: 50px;
     }
   }
 
@@ -170,10 +276,39 @@
     padding: 60px 120px 70px;
     background-color: #f7f7f7;
 
+    @media #{$sp} {
+      padding: 35px 15px;
+    }
+
+    .ttl-sub {
+      font-size: 14px;
+      font-weight: bold;
+      font-family: "Futura";
+      color: $primary-color;
+    }
+
     .ttl-secondary {
       font-size: 32px;
       margin-bottom: 61px;
     }
+  }
+  // ===========END SECTIONS==========
 
+  .section-primary-wrapper {
+    .containers {
+      max-width: unset;
+      padding: 0;
+
+      .card-list {
+        display: grid;
+        grid-template-columns: repeat(3, minmax(auto, 380px));
+        gap: 30px;
+        justify-content: center;
+
+        @media #{$tab} {
+          grid-template-columns: auto;
+        }
+      }
+    }
   }
 }
