--- a/app/pages/smaller_companies/index.njk
+++ b/app/pages/smaller_companies/index.njk
@@ -331,7 +331,9 @@
                 に取り込まれるので、ペーパーレス化はもちろん経費精算を自動化することができます。</dd>
 
                 <div class="flex gap30 aiC sp-reverse">
-                  <figure class="sec__img"><img src="/assets/img/common/concur-expense.png" alt=""></figure>
+                  <div class="sec-left-wrapper">
+                    <figure class="sec__img"><img src="/assets/img/common/concur-expense.png" alt=""></figure>
+                  </div>
 
                   <div class="gap-10 sec-right-wrapper">
                     <dl class="flex aiC gap30 sec01-right-box">
@@ -416,7 +418,9 @@
             </dd>
 
               <div class="flex gap50 aiC sp-reverse">
-                <figure class="sec__img"><img src="/assets/img/common/saison-invoice.png" alt=""></figure>
+                <div class="sec-left-wrapper">
+                    <figure class="sec__img"><img src="/assets/img/common/saison-invoice.png" alt=""></figure>
+                </div>
 
                 <div class="gap-10 sec-right-wrapper">
                   <dl class="flex aiC gap30 sec01-right-box">
@@ -470,7 +474,9 @@
               </dd>
 
               <div class="flex gap50 aiC sp-reverse">
-                <figure class="sec__img"><img src="/assets/img/common/saison-fukurico.png" alt=""></figure>
+                <div class="sec-left-wrapper">
+                  <figure class="sec__img"><img src="/assets/img/common/saison-fukurico.png" alt=""></figure>
+                </div>
 
                 <div class="gap-10 sec-right-wrapper">
                   <dl class="flex aiC gap30 sec01-right-box">
@@ -535,7 +541,9 @@
               いたします。</dd>
 
               <div class="flex gap50 aiC sp-reverse">
-                <figure class="sec__img"><img src="/assets/img/common/cos-pro.png" alt=""></figure>
+                <div class="sec-left-wrapper">
+                  <figure class="sec__img"><img src="/assets/img/common/cos-pro.png" alt=""></figure>
+                </div>
 
                 <div class="gap-10 sec-right-wrapper">
                   <dl class="flex aiC gap30 sec01-right-box">
