--- a/app/assets/scss/3-modules/_button.scss
+++ b/app/assets/scss/3-modules/_button.scss
@@ -432,7 +432,7 @@
 }
 
 // ボタン04
-.black_pill_btn{
+.black_pill_btn {
   display: block;
   max-width: 560px;
   color: #fff;
@@ -751,7 +751,6 @@
     top: 0;
     bottom: 0;
     right: 20px;
-
     width: 8px;
     height: 8px;
     margin: auto;
@@ -759,6 +758,10 @@
     border-right: 3px px solid $blue-color;
     transform: rotate(45deg);
     transition: all 0.3s;
+
+    @media #{$sp} {
+      right: 13px;
+    }
   }
 
   &__tittle {
@@ -766,6 +769,10 @@
     font-size: 16px;
     font-weight: bold;
     margin: 0;
+  }
+
+  @media #{$sp} {
+    padding: 13px 20px;
   }
 }
 
@@ -787,7 +794,7 @@
   @media #{$sp} {
     font-size: 14px;
     padding: 13px;
-    max-width: 65%;
+    max-width: 75%;
   }
   &:before {
     content: "";
