--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -83,8 +83,8 @@
             <a href="#">
               <div class="anc__box__img smes"></div>
               <div class="anc__box__content">
-                <span class="font-20px font-md-16px">中小企業様向け</span>
-                <span class="font-16px">サービスはこちら</span>
+                <span class="anc__box__content--title">中小企業様向け</span>
+                <span class="anc__box__content--description">サービスはこちら</span>
               </div>
               <div class="anc__box__svg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
@@ -98,8 +98,8 @@
             <a href="#">
               <div class="anc__box__img sole"></div>
               <div class="anc__box__content">
-                <span class="font-20px">個人事業主様向け</span>
-                <span class="font-16px">サービスはこちら</span>
+                <span class="anc__box__content--title">個人事業主様向け</span>
+                <span class="anc__box__content--description">サービスはこちら</span>
               </div>
               <div class="anc__box__svg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
@@ -376,7 +376,7 @@
             </div>
             <h2 class="ttl-tertiary">タイトルが入ります。タイトルが入ります。</h2>
             <dl class="sec-news__box--item-secondary">
-              <dt class="core flex-start sp-fS">
+              <dt class="core flex-start sp-fS w30">
                 <span>
                   <svg id="Component_35_1" data-name="Component 35 – 1" xmlns="http://www.w3.org/2000/svg"
                     width="13.738" height="13" viewBox="0 0 13.738 13">
@@ -408,7 +408,7 @@
                   対象
                 </span>
               </dt>
-              <dt class="core flex-start gap30 sp-fS">
+              <dt class="core flex-start gap30 sp-fS w70">
                 <h4 class="ttl-quaternary">2022年9月22日　10:00～11:00</h4>
                 <h4 class="ttl-quaternary">株式会社〇〇〇〇</h4>
                 <h4 class="ttl-quaternary">○○○○○のニーズ・課題をお持ちの〇〇</h4>
@@ -426,7 +426,7 @@
             </div>
             <h2 class="ttl-tertiary">タイトルが入ります。タイトルが入ります。</h2>
             <dl class="sec-news__box--item-secondary">
-              <dt class="core flex-start sp-fS">
+              <dt class="core flex-start sp-fS w30">
                 <span>
                   <svg id="Component_35_1" data-name="Component 35 – 1" xmlns="http://www.w3.org/2000/svg"
                     width="13.738" height="13" viewBox="0 0 13.738 13">
@@ -458,7 +458,7 @@
                   対象
                 </span>
               </dt>
-              <dt class="core flex-start gap30 sp-fS">
+              <dt class="core flex-start gap30 sp-fS w70">
                 <h4 class="ttl-quaternary">2022年9月22日　10:00～11:00</h4>
                 <h4 class="ttl-quaternary">株式会社〇〇〇〇</h4>
                 <h4 class="ttl-quaternary">○○○○○のニーズ・課題をお持ちの〇〇</h4>
