--- a/app/assets/scss/3-modules/_top-header.scss
+++ b/app/assets/scss/3-modules/_top-header.scss
@@ -17,7 +17,7 @@ header {
       @media (min-width: 1440px) {
         width: 350px;
       }
-      @media #{$sp}{
+      @media #{$sp} {
         width: 200px;
         margin-left: 20px;
       }
@@ -89,7 +89,7 @@ header {
         }
       }
     }
-    @media #{$sp}{
+    @media #{$sp} {
       justify-content: space-between;
     }
   }
@@ -174,13 +174,17 @@ header {
       }
     }
     &__sp {
-      display: none;
+      width: 100%;
+      overflow: hidden;
+      height: 0;
       background-color: $white-color;
-      height: calc(100vh - 50px);
-      padding: 50px 25px;
+      padding: 0 25px;
+      transition: 0.3s ease-in-out;
       &.open {
         display: block;
-        transition: 0.2s ease-in;
+        height: calc(100vh - 50px);
+        overflow: auto;
+        padding: 50px 25px;
       }
       li {
         width: 100%;
