--- a/app/pages/sole_proprietorship/index.njk
+++ b/app/pages/sole_proprietorship/index.njk
@@ -366,7 +366,8 @@
           <h3 class="ttl-tertiary">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</h3>
         </div>
         <button class="qa-button">
-          {% include 'component/icons/minus.njk' %}
+          <span class="svg__plus">{% include 'component/icons/plus.njk' %}</span>
+          <span class="svg__minus">{% include 'component/icons/minus.njk' %}</span>
         </button>
       </div>
       <div class="flex gap20 answer-tab">
