--- a/app/assets/scss/4-pages/_case_detail.scss
+++ b/app/assets/scss/4-pages/_case_detail.scss
@@ -211,7 +211,7 @@
         text-align: left;
 
         @media #{$sp} {
-          padding: 0 10px;
+          padding: 0 10px 20px;
           gap:0;
         }
 
