--- a/app/assets/scss/3-modules/_form.scss
+++ b/app/assets/scss/3-modules/_form.scss
@@ -212,6 +212,7 @@
       margin-left: 10px;
       vertical-align: middle;
       position: relative;
+
       &::after {
         content: "必須";
       }
@@ -288,9 +289,11 @@
       color: #fff;
       -webkit-border-radius: 3px;
       border-radius: 3px;
+      min-width: 32px;
 
       &::after {
         content: "必須";
+        white-space: nowrap;
       }
     }
 
