--- a/app/assets/scss/4-pages/_case_list.scss
+++ b/app/assets/scss/4-pages/_case_list.scss
@@ -101,6 +101,8 @@
             color: #000;
             text-align: left;
             margin-bottom: 0;
+            padding-left: 0;
+            padding-right: 0;
 
             &::before {
               display: none;
