responsive smaller_companies

--- a/app/assets/scss/2-basics/_base.scss
+++ b/app/assets/scss/2-basics/_base.scss
@@ -74,7 +74,7 @@ $grid-breakpoints: (
     }
   }
   &.aiC {
-    align-items: center;
+    align-items: center !important;
   }
   &.aiE {
     align-items: flex-end;
