--- a/app/pages/smaller_companies/index.njk
+++ b/app/pages/smaller_companies/index.njk
@@ -189,7 +189,7 @@
             </div>
             </summary>
 
-            <ul class="flex gap30 lastest-list">
+            <ul class="inquiry__box--content gap30 lastest-list">
               <li class="card-type11">
                 <a href="#" class="card">
                   <h3 class="ttl-tertiary">従業員もラクに！</h3>
