--- a/app/assets/scss/4-pages/_business.scss
+++ b/app/assets/scss/4-pages/_business.scss
@@ -92,20 +92,26 @@
           flex-wrap: wrap;
           column-gap: 30px;
           row-gap: 20px;
+          max-width: 1200px;
+          margin: auto;
 
           @media #{$tab} {
             display: grid;
             grid-template-columns: repeat(2, minmax(auto, 380px));
+            gap: 30px;
           }
 
           @media #{$sp} {
-            display: flex;
-            flex-direction: column;
+            grid-template-columns: auto;
           }
 
           li {
             flex-basis: calc(33.33% - 60px);
             max-width: 380px;
+
+            @media #{$sp} {
+              max-width: unset;
+            }
           }
         }
       }
@@ -180,6 +186,33 @@
 
         &:last-child {
           margin-bottom: 0;
+        }
+
+        &-body {
+          .card-list {
+            @media #{$sp} {
+              display: grid;
+              grid-template-rows: repeat(3, auto);
+              row-gap: 30px;
+            }
+
+            .card-type12 {
+              @media #{$sp} {
+                width: 100%;
+                position: relative;
+
+                &::after {
+                  position: absolute;
+                  content: "";
+                  width: calc(100% + 10px);
+                  height: 1px;
+                  bottom: -15px;
+                  left: 0;
+                  background: #ccc;
+                }
+              }
+            }
+          }
         }
       }
     }
