fix responsive and create whitepaper_thanks(26)

--- a/app/pages/faq/index.njk
+++ b/app/pages/faq/index.njk
@@ -76,10 +76,10 @@
     </div>
   </section>
   <section class="octonary-section">
-    <div class="card-type22">
+    <div>
       <div class="ttl-notice">CONTACT</div>
       <h3 class="ttl-tertiary">決済・ビジネスソリューションに関するお問合せ</h3>
-      <div class="useful-wp">
+      <div class="useful-wp container">
         <div class="containers">
           <div class="flex jcC gap60">
             <div href="#" class="card">
