--- a/app/assets/scss/4-pages/_faq.scss
+++ b/app/assets/scss/4-pages/_faq.scss
@@ -142,22 +142,98 @@
   }
 
   .octonary-section {
-    .card-type22 {
-      .ttl-tertiary {
-        @media #{$sp} {
-          font-size: 20px;
-        }
+    position: relative;
+    color: white;
+    background-image: url("/assets/img/common/contact_banner.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 70px 0;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.55);
+    }
+    .ttl-notice {
+      position: relative;
+      color: $white-color;
+      z-index: 1;
+    }
+
+    .ttl-tertiary {
+      position: relative;
+      text-align: center;
+      font-size: 32px;
+      margin-bottom: 45px;
+      line-height: 51px;
+      @media #{$sp} {
+        font-size: 22px;
+        line-height: 35px;
       }
     }
 
-    .card__box {
-      padding: 40px !important;
+    .useful-wp {
+      position: relative;
+      margin-bottom: 0px;
 
-      .blue_gradient_btn {
-        margin-top: 35px;
+      .containers {
+        max-width: unset;
+        padding: 0;
 
-        @media #{$sp} {
-          max-width: 100%;
+        .card {
+          max-width: 570px;
+
+          .card__box {
+            background-color: #fff;
+            padding: 40px 93px;
+
+            .card__box--ttl {
+              text-align: center;
+              color: #000000;
+              font-size: 22px;
+              margin-bottom: 20px;
+            }
+
+            .card__box--txt {
+              font-size: 16px;
+              font-weight: 400;
+              margin-bottom: 30px;
+              color: #000000;
+              text-align: center;
+            }
+
+            .more {
+              padding: 7px 0;
+              max-width: 287px;
+              background-color: #f29600;
+              border-color: #f29600;
+
+              &:hover {
+                color: white;
+
+                &::before {
+                  color: white;
+                }
+              }
+            }
+            @media #{$sp} {
+              padding: 15px;
+            }
+          }
+
+          &:hover {
+            .more.bgY {
+              color: #fff;
+            }
+
+            .more.bgY:before {
+              border-top: 2px solid #fff;
+              border-right: 2px solid #fff;
+            }
+          }
         }
       }
     }
